--- a/npcs/Races Classes and Subclasses/artificer_subclasses.yaml
+++ b/npcs/Races Classes and Subclasses/artificer_subclasses.yaml
@@ -94,6 +94,7 @@
                Repair - (3/Day). The magical mechanisms inside the defender restore 2d8 + PB hit points to itself or to one construct or object within 5 feet of it.
                Reactions -
                Deflect Attack - The defender imposes disadvantage on the attack roll of one creature it can see that is within 5 feet of it, provided the attack roll is against a creature other than the defender.
+               Intimidate - It is an imposing sight and all those seeing it for the first time must make a DC 12 Wisdom save or become firghtened for 1 round
     - title: Extra Attack
     - content: You can attack twice, rather than once, whenever you take the Attack action on your turn.
     - title: Arcane Jolt
