--- a/npcs/scarback.yaml
+++ b/npcs/scarback.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -330,6 +330,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - N/A
 
 
@@ -461,57 +462,82 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
-    - Half-Ogre Abilities:
-      - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
-        Strong and Angry: Due to your giant size and insane strength, using great weapons tends to be really easy for you. You gain proficiency with the greataxe and the maul.
-        Relentless Power: Nothing can stop your imense strength. When you roll a critical hit with a melee weapon, you can roll one of the weapon dice again and add it to the total.
-        Unstoppable Destruction: Your size and strength are unmatched. If you hit an enemy with an attack with a two-handed melee weapon, you can use your bonus action to attack one adjacent enemy within 5ft from you and the
-                                 enemy you first hit with your two-handed melee weapon, though the second attack is rolled with disadvantage.
-        Frightful Appearance: Due to your sheer size, you would put the braves to run. You gain proficiency in the Intimidation skill.
-        Bloodrage: Your blood becomes filled with your anger. Once per long rest, with a bonus action, you may raise your Strength score by 4 for 1 minute. When the Bloodrage ceases, you get a minus 4 in your Intelligence
-                   score untill you finish a short or long rest.
-      Barbarian Abilities:
-      - Rage:
-        - Descripition: Can enter a rage as a Bonus Action.
-          Additional Information:
-          - Advantage on Strength Checks and Strength Saving Throws
-          - Make a melee weapon Attack using Strength, you gain a +2 bonus to the damage roll
-          - Resistance to bludgeoning, piercing, and slashing damage
-          Danger Sense: has advantage on Dexterity Saving Throws against Effects that he can see, such as traps and Spells
-          Reckless Attack: When making his first Attack on his Turn, he can decide to Attack recklessly. Doing so gives him advantage on melee weapon Attack Rolls using Strength during this turn,
-                           but Attack Rolls against him have advantage until his next turn
-          Extra Attack: Can attack twice each turn
-          Fast Movement: your speed increases by 10 feet while you aren't wearing Heavy Armor. 
-        Path of the Beast Abilities:
-        - Form of the Beast:
-          - Description: When you enter your rage, you can transform, revealing the bestial power within you. Until the rage ends, you manifest a natural weapon. It counts as a simple melee weapon for you, and you add your 
-                         Strength modifier to the attack and damage rolls when you attack with it, as normal. You choose the weapon’s form each time you rage - 
-            Bite: Your mouth transforms into a bestial muzzle or great mandibles (your choice). It deals 1d8 piercing damage on a hit. Once on each of your turns when you damage a creature with this bite, you
-                  regain a number of hit points equal to your proficiency bonus, provided you have less than half your hit points when you hit.
-            Claws: Each of your hands transforms into a claw, which you can use as a weapon if it’s empty. It deals 1d6 slashing damage on a hit. Once on each of your turns when you attack with a claw using
-                   the Attack action, you can make one additional claw attack as part of the same action.
-            Tail: You grow a lashing, spiny tail, which deals 1d8 piercing damage on a hit and has the reach property. If a creature you can see within 10 feet of you hits you with an attack roll, you can use
-                  your reaction to swipe your tail and roll a d8, applying a bonus to your AC equal to the number rolled, potentially causing the attack to miss you
-        Bestial Soul:
-        - Description: the feral power within you increases, causing the natural weapons of your Form of the Beast to count as magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage. You
-                       can also alter your form to help you adapt to your surroundings. When you finish a short or long rest, choose one of the following benefits, which lasts until you finish a short or long rest
-          Additional informaion:
-          - You gain a swimming speed equal to your walking speed, and you can breathe underwater.
-          - You gain a climbing speed equal to your walking speed, and you can climb difficult surfaces, including upside down on ceilings, without needing to make an ability check.
-          - When you jump, you can make a Strength (Athletics) check and extend your jump by a number of feet equal to the check’s total. You can make this special check only once per turn.        f
+    saving-throws:
+    - Constitution
+    - Strength
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Bludgeoning, Piercing, and Slashing Damage while Raging
+    skills:
+    - N/A
+    proficiencies:
+    - Athletics
+    - Survival    
+    - Intimidation
+    - Heavy Armor
+    - Great Weapons
+  special-abilities: 
+  - title: Half-Ogre Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
+    - title: Strong and Angry
+    - content: Due to your giant size and insane strength, using great weapons tends to be really easy for you. You gain proficiency with the greataxe and the maul.
+    - title: Relentless Power
+    - content: Nothing can stop your imense strength. When you roll a critical hit with a melee weapon, you can roll one of the weapon dice again and add it to the total.
+    - title: Unstoppable Destruction
+    - content: Your size and strength are unmatched. If you hit an enemy with an attack with a two-handed melee weapon, you can use your bonus action to attack one adjacent enemy within 5ft from you and the
+               enemy you first hit with your two-handed melee weapon, though the second attack is rolled with disadvantage.
+    - title: Frightful Appearance
+    - content: Due to your sheer size, you would put the braves to run. You gain proficiency in the Intimidation skill.
+    - title: Bloodrage
+    - content: Your blood becomes filled with your anger. Once per long rest, with a bonus action, you may raise your Strength score by 4 for 1 minute. When the Bloodrage ceases, you get a minus 4 in your Intelligence
+               score untill you finish a short or long rest.
+  - title: Barbarian Abilities
+  - abilities:
+    - title: Unarmored Defense
+    - content: While you are not wearing any armor, your Armor Class equals 10 + your Dexterity modifier + your Constitution modifier. You can use a shield and still gain this benefit.
+    - title: Rage
+    - content: Can enter a rage as a Bonus Action. 
+               have advantage on Strength Checks and Strength Saving Throws.
+               make a melee weapon Attack using Strength, you gain a +2 bonus to the damage roll
+               Resistance to bludgeoning, piercing, and slashing damage          
+    - title: Danger Sense
+    - content: has advantage on Dexterity Saving Throws against Effects that he can see, such as traps and Spells
+    - title: Reckless Attack
+    - content: When making his first Attack on his Turn, he can decide to Attack recklessly. Doing so gives him advantage on melee weapon Attack Rolls using Strength during this turn, 
+               but Attack Rolls against him have advantage until his next turn
+    - title: Extra Attack
+    - content: Can attack twice each turn	
+    - title: Fast Movement
+    - content: your speed increases by 10 feet while you aren't wearing Heavy Armor. 
+  - title: Path of the Beast Abilities
+  - abilities: 
+    - title: Form of the Beast
+    - content: When you enter your rage, you can transform, revealing the bestial power within you. Until the rage ends, you manifest a natural weapon. It counts as a simple melee weapon for you, and you add your 
+               Strength modifier to the attack and damage rolls when you attack with it, as normal. You choose the weapon’s form each time you rage;
+               Bite - Your mouth transforms into a bestial muzzle or great mandibles (your choice). It deals 1d8 piercing damage on a hit. Once on each of your turns when you damage a creature with this bite, you 
+                      regain a number of hit points equal to your proficiency bonus, provided you have less than half your hit points when you hit.
+               Claws - Each of your hands transforms into a claw, which you can use as a weapon if it’s empty. It deals 1d6 slashing damage on a hit. Once on each of your turns when you attack with a claw using the 
+                       Attack action, you can make one additional claw attack as part of the same action.
+               Tail - You grow a lashing, spiny tail, which deals 1d8 piercing damage on a hit and has the reach property. If a creature you can see within 10 feet of you hits you with an attack roll, you can use 
+                      your reaction to swipe your tail and roll a d8, applying a bonus to your AC equal to the number rolled, potentially causing the attack to miss you.
+    - title: Bestial Soul
+    - content: The feral power within you increases, causing the natural weapons of your Form of the Beast to count as magical for the purpose of overcoming resistance and immunity to nonmagical attacks and damage. You 
+               can also alter your form to help you adapt to your surroundings. When you finish a short or long rest, choose one of the following benefits, which lasts until you finish a short or long rest;
+               You gain a swimming speed equal to your walking speed, and you can breathe underwater.
+               You gain a climbing speed equal to your walking speed, and you can climb difficult surfaces, including upside down on ceilings, without needing to make an ability check.
+               When you jump, you can make a Strength (Athletics) check and extend your jump by a number of feet equal to the check’s total. You can make this special check only once per turn.
+  - title: Feats
+  - content: Great Weapons Master
 
-    special-abilities:
-       - Proficiencies: Athletics, Intimidation, Survival
-         Feats: Great Weapons Master
-
-    attacks: |
-      1 attack with Great Axe or Javelins
-    combat-tactics: |
-      Scarback is fearless. He will almost always begin any combat by entering a rage and attacking the most powerful appearing foe.
-    special-equipment:
-    - Great Axe
-    - 3 Javelins
+  - title: Attacks
+  - content: 1 attack with Great Axe or Javelins
+  - title: Combat Tactics
+  - content: Scarback is fearless. He will almost always begin any combat by entering a rage and attacking the most powerful appearing foe.
 
   profile:
 
