--- a/npcs/samuel_cohen.yaml
+++ b/npcs/samuel_cohen.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -332,6 +332,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: the_dream_hunters
       name: The Dream Hunters
 
@@ -465,39 +466,60 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
+    saving-throws:
+    - Strength
+    - Dexterity
+    damage-immunities:
+    - Sleep Magic
+    condition-immunities:
+    - N/A
+    resistances:
+    - Charmed
+    skills:
+    - N/A
+    proficiencies:
+    - Arcana
+    - Perception
+    - Insight    
+    - History
+    - Persuasion
+  special-abilities:
+  - title: Elf Abilities
+  - abilities: 
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+    - title: Elf Weapon Training
+    - content: You have proficiency with the longsword, shortsword, shortbow, and longbow.
+    - title: Fleet of Foot
+    - content: Your base walking speed increases to 35 feet.
+    - title: Mask of the Wild
+    - content: You can attempt to hide even when you are only lightly obscured by foliage, heavy rain, falling snow, mist, and other natural phenomena
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content:
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10 + 
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+  - title: Champion Abilities
+  - abilities: 
+    - title: Improved Critical
+    - content: Your weapon attacks score a critical hit on a roll of 19 or 20         
 
-    - Elf Abilities:
-        - Fey Ancestry: Advantage on saving throws againts charm and immune to sleep magic
-        - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-        - Keen Senses: You have proficiency in the Perception skill 
-        - Trance: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
-                  dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
-        - Elf Weapon Training: You have proficiency with the longsword, shortsword, shortbow, and longbow.
-        - Fleet of Foot: Your base walking speed increases to 35 feet.
-        - Mask of the Wild: You can attempt to hide even when you are only lightly obscured by foliage, heavy rain, falling snow, mist, and other natural phenomena
-
-    - Fighter Abilities:
-         - Fighting Style: Protection
-         - Second Wind: Bonus Action to regain 1d10 + 5
-         - Action Surge: Once every short/long rest can take an extra action
-         - Extra Attack: Can attack twice each turn 
-
-    - Champion Abilities:
-         - Improved Critical: your weapon attacks score a critical hit on a roll of 19 or 20         
-      
-    special-abilities:
-       - Proficiencies: Arcana, Insight, History
-       - Feats: N/A
-       
-    attacks: |
-      1 attack with Halberd
-    combat-tactics: |
-      Samuel will not hesitate to defend himself or anyone else, leaping into combat and switching between opponents if there are multiples.
-    special-equipment:
-    - The Dictionary of the Khazar Halflings
-    - unbound loose leaf pages in his feedbag written in Death Ink.
-    - Halberd
+  - title: Attacks
+  - content: 1 attack with Halberd
+  - title: Combat Tactics
+  - content: Samuel will not hesitate to defend himself or anyone else, leaping into combat and switching between opponents if there are multiples.
       
   profile:
 
