--- a/npcs/silas_urthodon.yaml
+++ b/npcs/silas_urthodon.yaml
@@ -464,32 +464,73 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charmed
     skills:
-    - Drow Abilities:
-      - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-        Keen Senses: Proficiency in Perception
-        Fey Ancestry: Advantage on saving throws against charm and immune to sleep magic
-        Trance: Deasn't need to sleep, 4 hours meditation counts as a long rest
-        Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-        Drow Magic: Can cast Dancing Lights, Faerie Fire, Darkness, Detect Magic, Dispel Magic and Levitate once per long rest with charisma as spellcasting ability
-        Drow Weapons Training: Proficient with rapiers, shortswords and hand crossbow
-      Undertaker Abilities: 
-      - Skill Proficiencies: Medicine, Religion - Burial Rites, Investigation, History - Burial Rites, Insight,
-        Tool Proficiencies: Carpenter's Tools, Stonecarver's Tools, Disguise Kit, Alchemist Kit, Sewnig Kit, Medical Kit
-        Funeral Network: Well connected in circles dealing with funerals ie. florists, carriages, churches, other undertakers and advantage on persuasion in dealing with them
-        Coroner: Has advantage when trying to determine cause and/or time of death    
+    - Undertaking
+    proficiencies:
+    - Medicine
+    - Perception
+    - Religion - Burial Rites    
+    - Investigation
+    - History - Burial Rites
+    - insight
+    - Carpenter's Tools
+    - Stonecarver's Tools
+    - Disguise Kit
+    - Alchemist Kit
+    - Sewing Kit
+    - Medical Kit
+  special-abilities:
+  - title: Drow Abilities
+  - abilities: 
+    - title: Superior Darkvision 
+    - content: See 120 in like bright light in dim light and like dim light in darkness
+    - title: Keen Senses
+    - content: Proficiency in Perception
+    - title: Fey Ancestry
+    - content: Advantage on saving throws against charm and immune to sleep magic
+    - title: Trance
+    - content: Doesn't need to sleep, 4 hours meditation counts as a long rest
+    - title: Sunlight Sensitivity
+    - content: Disadvantage on attack and perception roles in direct sunlight
+    - title: Drow Magic
+    - content: Can cast Dancing Lights, Faerie Fire, Darkness
+    - title: Drow Weapons Training
+    - content: Proficient with rapiers, shortswords and hand crossbow
+  - title: Undertaker Abilities
+  - abilities:
+    - title: Skill Proficiencies
+    - content: Medicine, Religion, Burial Rites, Investigation, History, Burial Rites, Insight,
+    - title: Tool Proficiencies
+    - content: Carpenter's Tools, Stonecarver's Tools, Disguise Kit, Alchemist Kit, Sewnig Kit, Medical Kit
+    - title: Funeral Network
+    - content: Well connected in circles dealing with funerals ie. florists, carriages, churches, other undertakers and advantage on persuasion in dealing with them
+    - title: Coroner
+    - content: Has advantage when trying to determine cause and/or time of death   
+ 
+  - title: Feats
+  - content: Elven Acuracy, Actor, Crossbow Expert, Healer, Keen Mind, Drow High Magic
 
-    special-abilities: 
-    - Feats: Elven Acuracy, Actor, Crossbow Expert, Healer, Keen Mind, Drow High Magic
+  - title: Attacks
+  - content: Hand Crossbow at range or rapier cane in melee range 
+  - title: Combat Tactics
+  - content: He will only fight if necessary, but will take surprise shots at the unwary
 
-    attacks: |
-      Hand Crossbow at range or rapier cane in melee range 
-    combat-tactics: |
-      He will only fight if necessary, but will take surprise shots at the unwary
-    special-equipment:
-    - Hand Crossbow
-    - +1 Rapier Cane
-    - Undertaker's Tools - Various tools from Carpenter's and Stonecarver's Tools as well as items from Disguise, Alchemist, Medical and Sewing Kits 
+  - title: Special Equipment
+  - abilities:
+    - title: +1 Rapier Cane
+    - content: This weapon is hidden inside of an ornately carved oak cane. You have a +1 bonus to Attack and Damage Rolls made with this weapon.
+    - title: Undertaker's Tools
+    - content: Various tools from Carpenter's and Stonecarver's Tools as well as items from Disguise, Alchemist, Medical and Sewing Kits 
 
   profile:
 
