--- a/npcs/sister_uriah_quartz.yaml
+++ b/npcs/sister_uriah_quartz.yaml
@@ -465,75 +465,185 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Constitution
+    - Wisdom
+    - Strength
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - Poison
     skills:
-    - Hill Dwarf Traits:
-      - Darkvision: Can see 300 feet in dim light as though it was bright light and in darkness as if it was dim light
-        Dwarven Resiliance: Advantage on saving throws against poison and resistance to poison damage
-        Dwarven Combat Training: Proficiency with Battle Axes, Handaxes, Light Hammers and Warhammers
-        Tool Proficincey: Proficient with Smith's Tools
-        Stonecunning: Whenever making an Intelligence (History) check related to stonework, is considered proficient in the History skill adding double her proficiency
-        Dwarven Toughness: Hit point Max increases by 1 every level
-      Fighter Abilities:
-      - Fighting Style: Archery
-        Second Wind: Bonus Action to regain 1d10 + Fighter Level
-        Action Surge: Once every short/long rest can take an extra action
-        Extra Attack: Can attack twice each turn
-        Indomitable: Can reroll 1 saving throw per long rest
-      Rune Knight Traits: 
-      - Rune Carver: Once per long rest can touch 4 objects that can be worn or held, to inscribe runes onto those objects. The rune stays on the object until the next long rest
-        Runes Known: Cloud Rune, Stone Rune, Storm Rune, Fire Rune
-        Giant Might: 4 Times per long rest as a bonus action can increase size to Large, have advantage Strength Checks and Strength Saving Throws, Once per turn can deal an extra 1d8 damage on one attack
-        Runic Shield: 4 Times per long rest as a reaction when another creature within 60 feet is hit by an attack roll, can force the attacker to reroll the d20 and use the new roll
-        Great Stature: gains 11 inches in height and increases Giant Might damage
-      Cleric Abilities:
-       - Spellcasting: 
-         - Spell DC: 21
-           Cantrips: Guidance, Light, Resistance, Sacred Flame, Spare the Dying
-           1st Level: Healing Word, Bane, Bless, Cure Wounds
-           2nd Level: Lesser Restoration, Spiritual Weapon, Prayer of Healing
-           3rd Level: Mass Healing Word, Beacon of Hope, Revivify
-           4th Level: Banishment, Locate Creature, Divination
-           5th Level: Hallow, Greater Restoration, Dispel Evil, Mass Cure Wounds
-           6th Level: Heal 
-           7th Level: Resurrection 
-           8th Level: Anti-magic Field, Holy Aura
-           9th Level: Mass Heal
-         Channel Divinity: Turn Undead, Destroy Undead, Twilight Sanctuary 
-         Divine Intervention: Can call her patron to intervene on her behalf
-      Twilight Domain Abilities:
-      - Eyes of Night: Once pe long rest as an action can share her dark vision with up to 7 other creatures within 10 feet of her for up to 1 hour
-        Vigilant Blessing: Can give any creature she touches (herself included) advantage on their next initiative roll
-        Twilight Sanctuary: As an action , can use holy symbol to create a 30-foot-radius sphere of twilight  giving all creatures with 1d6+18 temporary hit points and end one charming or frightened effect on them
-        Steps of Night: 6 times per long rest as a bonus action in dim light or darkness she gains a flying speed of 30 feet for 1 minute
-        Divine Strike: Once per turn when hitting a creature with a weapon attack, that attack deals and extra 2d8 psychic damage
-        Twilight Shroud: Allies with her Twilight Sanctuary are considered to have half cover        
-        Spellcasting:
-        - Cantrips: Toll The Dead
-          1st Level: Faerie Fire, Sleep
-          3rd Level: Moonbeam, See Invisibility
-          5th Level: Aure of Vitality, Leomund's Tiny Hut
-          7th Level: Aura of Life, Greater Invisibility
-          9th Level: Circle of Power, Mislead
+    - Leatherworking
+    proficiencies:
+    - Arcana
+    - History
+    - Religion    
+    - Athletics
+    - Medicine
+    - Smith's Tools
+    - Heavy Armor
+    - Insight
+    - Shields
+    - Intimidation
+  special-abilities:
+  - title: Dwarf Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.
+    - title: Dwarven Resistance
+    - content: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+    - title: Tool Proficiency
+    - content: You gain proficiency with the artisan's tools of your choice; smith's tools, brewer's supplies, or mason's tools.       
+    - title: Dwarven Combat Training
+    - content: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+    - title: Stonecunning
+    - content: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+               instead of his normal Proficiency Bonus
+  - title: Fighter Abilities
+  - abilities:
+    - title: Fighting Style
+    - content:
+    - title: Second Wind
+    - content: Bonus Action to regain 1d10 + 
+    - title: Action Surge
+    - content: Once every short/long rest can take an extra action
+    - title: Extra Attack
+    - content: Can attack twice each turn
+    - title: Indomitable
+    - content: you can reroll a saving throw that you fail. If you do so, you must use the new roll, and you can use this feature 3 times per Long Rest.
+  - title: Rune Knight Abilities
+  - abilities: 
+    - title: Bonus Proficiencies
+    - content: You gain proficiency with smith’s tools, and you learn to speak, read, and write Giant
+    - title: Rune Carver
+    - content: You can use magic runes to enhance your gear. You learn two runes of your choice, from among the runes described below, and each time you gain a level in this class, you can replace one rune you know with a
+               different one from this feature. When you reach certain levels in this class, you learn additional runes, as shown in the Runes Known table.
+    - title: Runes Known
+    - content: Cloud Rune, Stone Rune, Storm Rune, Fire Rune
+    - title: Giant Might
+    - content: You have learned how to imbue yourself with the might of giants. As a bonus action, you magically gain the following benefits, which last for 1 minute;
+               If you are smaller than Large, you become Large, along with anything you are wearing. If you lack the room to become Large, your size doesn't change.
+               You have advantage on Strength checks and Strength saving throws.
+               Once on each of your turns, one of your attacks with a weapon or an unarmed strike can deal an extra 1d6 damage to a target on a hit.
+               You can use this feature a number of times equal to your proficiency bonus, and you regain all expended uses of it when you finish a long rest.
+    - title: Runic Shield
+    - content: You learn to invoke your rune magic to protect your allies. When another creature you can see within 60 feet of you is hit by an attack roll, you can use your reaction to force the attacker to reroll the 
+               d20 and use the new roll. You can use this feature a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
+    - title: Great Stature
+    - content: The magic of your runes permanently alters you. When you gain this feature, roll 3d4. You grow a number of inches in height equal to the roll. Moreover, the extra damage you deal with your Giant's Might 
+               feature increases to 1d8.
+  - title: Cleric Abilities
+  - abilities:
+  - title: Cleric Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 21
+    - title: Cantrips
+    - content: Guidance, Light, Resistance, Sacred Flame, Spare the Dying
+    - title: 1st Level
+    - content: Healing Word, Bane, Bless, Cure Wounds
+    - title: 2nd Level
+    - content: Lesser Restoration, Spiritual Weapon, Prayer of Healing
+    - title: 3rd Level
+    - cotnent: Mass Healing Word, Beacon of Hope, Revivify
+    - title: 4th Level
+    - content: Banishment, Locate Creature, Divination
+    - title: 5th Level
+    - content: Hallow, Greater Restoration, Dispel Evil, Mass Cure Wounds
+    - title: 6th Level
+    - content: Heal, Sunbeam
+    - title: 7th Level
+    - content: Resurrection, Plane Shift 
+    - title: 8th Level
+    - content: Anti-magic Field, Holy Aura
+    - title: 9th Level
+    - content: Mass Heal
+  - title: Channel Divinity
+  - abilities:    
+    - title: Turn Undead
+    - content: As an action, you present your holy Symbol and speak a prayer censuring the Undead. Each Undead that can see or hear you within 30 feet of you must make a Wisdom saving throw. If the creature fails its saving 
+               throw, it is turned for 1 minute or until it takes any damage. A turned creature must spend its turns trying to move as far away from you as it can, and it can't willingly move to a space within 30 feet of you. 
+               It also can't take Reactions. For its action, it can use only the Dash action or try to Escape from an Effect that prevents it from moving. If there's nowhere to move, the creature can use the Dodge action.    
+    - title: Destroy Undead
+    - content: Starting at 5th Level, when an Undead of CR 1/2 or lower fails its saving throw against Your Turn Undead feature, the creature is instantly destroyed.    
+    - title: Divine Intervention
+    - content: Beginning at 10th level, you can call on your deity to intervene on your behalf when your need is great. Imploring your deity's aid requires you to use your action. Describe the assistance you seek, and roll 
+               percentile dice. If you roll a number equal to or lower than your Cleric level, your deity intervenes. The DM chooses the Nature of the intervention; the Effect of any Cleric spell or Cleric domain spell would be 
+               appropriate. If your deity intervenes, you can't use this feature again for 7 days. Otherwise, you can use it again after you finish a Long Rest. At 20th level, your call for intervention succeeds automatically, 
+               no roll required.
+  - title: Twilight Domain Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content:
+    - title: 1st Level
+    - content: Faerie Fire, Sleep
+    - title: 3rd Level
+    - content: Moonbeam, See Invisibility
+    - title: 5th Level
+    - content: Aure of Vitality, Tiny Hut
+    - title: 7th Level
+    - content: Aura of Life, Greater Invisibility
+    - title: 9th Level
+    - content: Circle of Power, Mislead
+    - title: Bonus Proficiencies
+    - content: You gain proficiency with martial weapons and heavy armor.
+    - title: Eyes of Night
+    - content: You can see through the deepest gloom. You have darkvision out to a range of 300 feet. In that radius, you can see in dim light as if it were bright light and in darkness as if it were dim light. As an 
+               action, you can magically share the darkvision of this feature with willing creatures you can see within 10 feet of you, up to a number of creatures equal to your Wisdom modifier (minimum of one creature).
+               The shared darkvision lasts for 1 hour. Once you share it, you can't do so again until you finish a long rest, unless you expend a spell slot of any level to share it again.
+    - title: Vigilant Blessing
+    - content: The night has taught you to be vigilant. As an action, you give one creature you touch (including possibly yourself) advantage on the next initiative roll the creature makes. This benefit ends 
+               immediately after the roll or if you use this feature again.
+    - title: Channel Divinity - Twilight Sanctuary
+    - content: You can use your Channel Divinity to refresh your allies with soothing twilight. As an action, you present your holy symbol, and a sphere of twilight emanates from you. The sphere 
+               is centered on you, has a 30-foot radius, and is filled with dim light. The sphere moves with you, and it lasts for 1 minute or until you are incapacitated or die. Whenever a 
+               creature (including you) ends its turn in the sphere, you can grant that creature one of these benefits;
+               You grant it temporary hit points equal to 1d6 plus your cleric level.
+               You end one effect on it causing it to be charmed or frightened.
+    - title: Steps of Night
+    - content: You can draw on the mystical power of night to rise into the air. As a bonus action when you are in dim light or darkness, you can magically give yourself a flying speed equal to your walking speed for 
+               1 minute. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
+    - title: Divine Strike
+    - content: You gain the ability to infuse your weapon strikes with divine energy. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8 radiant damage.
+               When you reach 14th level, the extra damage increases to 2d8.
+    - title: Twilight Shroud
+    - content: The twilight that you summon offers a protective embrace; you and your allies have half cover while in the sphere created by your Twilight Sanctuary. 
 
-    special-abilities:
-    - Proficiencies: Smith's Tools, Armor, Shields, Insight, Perception, Intimidation, History, Religion, Medicine
-      Feats: Durable, Great Weapon Master, Grudge-Bearer - Undead, Healer, Heavy Armor Master, Keen Mind, Sentinel, Shield Master, War Caster 
-      Legendary Resistance: (3/Day), If Sister Uriah Quartz fails a saving throw she can choose to succeed instead 
-      Legendary Actions:
-      - Description: Sister Uriah Quartz can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
-                     Sister Uriah Quartz regains spent Legendary Actions at the start of her turn
-        Moons Curse: Sister Uriah Quartz can cast Bane on any number of Undead or Fiends within 30 feet
-        Sisters Strike: Sister Uriah Quartz can slam her shield into the ground releasing a thunder wave. All creatures within 30 feet to make a strength saving throw DC15 or take 1d10 Thunder damage and be knocked prone
-        Moons Respite: Sister Uriah Quartz regain 1d12+6 HP 
-    
-    attacks: |
-      has 2 attacks
-    combat-tactics: |
-      Never afraid of a good fight against a fiend or undead
-    special-equipment:
-    - Supernal War Hammer
-    - Holy Shield
-    - +2 Chainmail
+  - title: Legendary Resistance
+  - content: (3/Day), If Sister Uriah Quartz fails a saving throw she can choose to succeed instead 
+  - title: Legendary Actions
+  - content: Sister Uriah Quartz can take 3 Legendary Actions. Choosing from the options from below, Only one Legendary Action can be used at a time and only at the end of another creature's turn. 
+             Sister Uriah Quartz regains spent Legendary Actions at the start of her turn
+  - abilities:
+    - title: Moon's Curse
+    - content: Sister Uriah Quartz can cast Bane on any number of Undead or Fiends within 30 feet
+    - title: Sister's Strike
+    - content: Sister Uriah Quartz can slam her shield into the ground releasing a thunder wave. All creatures within 30 feet to make a strength saving throw DC15 or take 1d10 Thunder damage and be knocked prone
+    - title: Moon's Respite
+    - content: Sister Uriah Quartz regain 1d12+6 HP 
+  - title: Feats
+  - content: Durable, Great Weapon Master, Grudge-Bearer - Undead, Healer, Heavy Armor Master, Keen Mind, Sentinel, Shield Master, War Caster    
+  - title: Attacks
+  - content: has 2 attacks
+  - title: Combat Tactics
+  - content: Never afraid of a good fight against a fiend or undead
+  
+  - title: Special Equipment
+  - abilities:
+    - title: Supernal War Hammer
+    - content: The handle is crafted from a unicorn horn, the head of the hammer crafted from a meteorite. This +2 magic weapon deals 1d10 bludgeoning damage + 1d10 radiant damage +1d10 force damage. The user of this weapon is
+               immune to negative conditions. This weapon deals maximum damage (30) against undead.
+    - title: Holy Protector
+    - content: This silver shield is embedded with a fist-sized sapphire. While holding this shield, you have a +2 bonus to AC in addition to the shield's normal bonus to AC. In addition, if you are hit by an attack made by a 
+               fiend or undead creature while holding this shield, you can use your reaction to reduce the damage by 1d10 + your Wisdom modifier. If you reduce the damage to 0, you can make a melee weapon attack against the 
+               attacker as a part of the same reaction.
+    - title: +2 Chainmail
+    - content: While wearing it, you have an extra +2 bonus to your AC
 
   profile:
 
