--- a/npcs/slithkyrin.yaml
+++ b/npcs/slithkyrin.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: adolescent
+    age: Adolescent
 
     #
     # Races (case insensitive):
@@ -330,6 +330,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: naga_temple_of_bahamut
       name: Naga Temple of Bahamut
     - id: naga_clan
@@ -461,49 +462,101 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
-      Naga Abilities:
-      - Darkvision: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
-        Keen Senses: You are proficient in the Perception skill
-        Poison Resistance: You have resistance to poison damage, and you have advantage on saving throws against becoming poisoned.
-        Herbalist: The foliage of the jungle has given you knowledge in herbs and their preparation. You are proficient in the Medicine skill. 
-      Naga Feats:
-      - Python: your body has the power to grapple enemies that are your size. You have advantage on checks to grapple enemies that are equal to or smaller than you in size. As a bonus action, you may squeeze a creature you
-                are grappling for 1d4 bludgeoning damage. This damage increases by 1d4 at levels 8 (2d4), 12 (3d4), 16 (4d4), and 20 (5d4). This feature can be used a number of times equal to your Strength modifier. You regain
-                all uses after you finish a long rest.
-        Venomous: your fangs allow you to inject it into your enemies with a fearsome bite. When you successfully attack a creature within 5 feet of you, you may use a bonus action to make a following strike on that creature,
-                  forcing them to make a Constitution saving throw or become poisoned for 1 minute. The DC for this saving throw is equal to 8 + your Constitution modifier + your proficiency bonus. You regain use of this
-                  ability after you complete a short or long rest.     
-      Cleric Abilities:
-      - Spellcasting: 
-        - Spell DC: 14
-          Cantrips: Decompose, Guidance, Sacred Flame, Resistance 
-          1st Level: Inflict Wounds, Bane, Bless, Guiding Bolt
-          2nd Level: Gentle Repose, Spiritual Weapon, Hold Person
-          3rd Level: Spirit Shroud, Speak with Dead, Animate Dead 
-        Channel Divinity: Turn Undead, Destroy Undead 
-      Death Domain Abilities:
-      - Spellcasting: 
-        - Spell DC: 14 
-          1st Level: False Life, Ray of Sickness
-          3rd Level: Blindness/Deafness, Ray of Enfeeblement
-          5th Level: Animate Dead, Vampiric Touch 
-        Reaper: you learn one necromancy cantrip of your choice from any spell list - Toll the Dead. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures within
-                range and within 5 feet of each other. 
-        Channel Divinity: Touch of Death - you can use Channel Divinity to destroy another creature's life force by touch. When you hit a creature with a melee attack, you can use Channel Divinity to deal extra necrotic damage
-                          to the target. The damage equals 5 + 12 
-        Inescapable Destruction:  your ability to channel negative energy becomes more potent. Necrotic damage dealt by your cleric spells and Channel Divinity options ignores resistance to necrotic damage.
+    saving-throws:
+    - Strength
+    - Wisdom
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Poisoned
+    resistances:
+    - Poison
+    skills:
+    - Religious Rites
+    proficiencies:
+    - Arcana
+    - Perception
+    - Deception    
+    - Intimidation
+    - Medicine
+    - Religion
+  special-abilities:
+  - title: Naga Abilities
+  - abilities: 
+    - title: Darkvision
+    - content: You can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray.
+    - title: Keen Senses
+    - content: You are proficient in the Perception skill
+    - title: Poison Resistance
+    - content: You have resistance to poison damage, and you have advantage on saving throws against becoming poisoned.
+    - title: Herbalist
+    - content: The foliage of the jungle has given you knowledge in herbs and their preparation. You are proficient in the Medicine skill.. 
+  - title: Naga Feats
+  - abilities:
+    - title: Python
+    - content: Your body has the power to grapple enemies that are your size. You have advantage on checks to grapple enemies that are equal to or smaller than you in size. As a bonus action, you may squeeze a creature you
+               are grappling for 1d4 bludgeoning damage. This damage increases by 1d4 at levels 8 (2d4), 12 (3d4), 16 (4d4), and 20 (5d4). This feature can be used a number of times equal to your Strength modifier. You regain
+               all uses after you finish a long rest.
+    - title: Venomous
+    - content: Your fangs allow you to inject it into your enemies with a fearsome bite. When you successfully attack a creature within 5 feet of you, you may use a bonus action to make a following strike on that creature,
+               forcing them to make a Constitution saving throw or become poisoned for 1 minute. The DC for this saving throw is equal to 8 + your Constitution modifier + your proficiency bonus. You regain use of this
+               ability after you complete a short or long rest.     
+  - title: Cleric Spellcasting
+  - abilities: 
+    - title: Spell DC
+    - content: 14
+    - title: Cantrips
+    - content: Decompose, Guidance, Sacred Flame, Resistance 
+    - title: 1st Level
+    - cotnent: Inflict Wounds, Bane, Bless, Guiding Bolt
+    - title: 2nd Level
+    - content: Gentle Repose, Spiritual Weapon, Hold Person
+    - title: 3rd Level
+    - content: Spirit Shroud, Speak with Dead, Animate Dead 
+  - title: Channel Divinity
+  - abilities:    
+    - title: Turn Undead
+    - content: As an action, you present your holy Symbol and speak a prayer censuring the Undead. Each Undead that can see or hear you within 30 feet of you must make a Wisdom saving throw. If the creature fails its saving 
+               throw, it is turned for 1 minute or until it takes any damage. A turned creature must spend its turns trying to move as far away from you as it can, and it can't willingly move to a space within 30 feet of you. 
+               It also can't take Reactions. For its action, it can use only the Dash action or try to Escape from an Effect that prevents it from moving. If there's nowhere to move, the creature can use the Dodge action.    
+    - title: Destroy Undead
+    - content: Starting at 5th Level, when an Undead of CR 1/2 or lower fails its saving throw against Your Turn Undead feature, the creature is instantly destroyed.
+  - title: Death Domain Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content: 14
+    - title: Cantrips
+    - content: Toll The Dead
+    - title: 1st Level
+    - content: False Life, Ray of Sickness
+    - title: 3rd Level
+    - content: Blindness/Deafness, Ray of Enfeeblement
+    - title: 5th Level
+    - content: Animate Dead, Vampiric Touch 
+    - title: Bonus Proficiency
+    - content: You gain proficiency with martial weapons.
+    - title: Reaper
+    - content: You learn one necromancy cantrip of your choice from any spell list. When you cast a necromancy cantrip that normally targets only one creature, the spell can instead target two creatures 
+               within range and within 5 feet of each other
+    - title: Channel Divinity - Touch of Death
+    - content: You can use Channel Divinity to destroy another creature's life force by touch. When you hit a creature with a melee attack, you can use Channel Divinity to deal extra necrotic damage 
+               to the target. The damage equals 5 + twice your cleric level
+    - title: Inescapable Destruction
+    - content: Your ability to channel negative energy becomes more potent. Necrotic damage dealt by your cleric spells and Channel Divinity options ignores resistance to necrotic damage
 
-    special-abilities:
-       - Proficiencies: Perception, Medicine, Arcana, Deception
-         Feats: N/A
-
-    attacks: |
-      1 attack with spell attach or venom or grapple
-    combat-tactics: |
-      Not used to fighting, she will attempt to grapple and constrict her opponent with her tail coils and then claw and bite them with her venom
-    special-equipment:
-    - Her tiara is her magical focus and holy symbol of office and contains a Gem of Seeing
+  - title: Attacks
+  - content: 1 attack with spell attach or venom or grapple
+  - title: Combat Tactics
+  - content: Not used to fighting, she will attempt to grapple and constrict her opponent with her tail coils and then claw and bite them with her venom
+    
+  - title: Special Equipment
+  - abilities:
+    - title: Priestess' Tiara
+    - content: Her tiara is her magical focus and holy symbol of office and contains a Gem of Seeing - This gem has 3 Charges. As an action, you can speak the gem's Command word and expend 1 charge. For the next 10 minutes, you 
+               have Truesight out to 120 feet when you peer through the gem. The gem regains 1d3 expended Charges daily at dawn.
 
   profile:
 
