--- a/npcs/slizznek.yaml
+++ b/npcs/slizznek.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -329,6 +329,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: his_tribe
       name: His Tribe
     - id: thieve_s_guild
@@ -461,29 +462,53 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
-    - Lizardfolk Abilities:
-      - Bite: Your fanged maw is a natural weapon, which you can use to make unarmed strikes. If you hit with it, you deal piercing damage equal to 1d6 + your Strength modifier, instead of the bludgeoning damage normal for an 
-              unarmed strike.
-        Cunning Artisan: As part of a short rest, you can harvest bone and hide from a slain beast, construct, dragon, monstrosity, or plant creature of size Small or larger to create one of the following items - a shield, a 
-                      club, a javelin, or 1d4 darts or blowgun needles. To use this trait, you need a blade, such as a dagger, or appropriate artisan's tools, such as leatherworker's tools.
-        Hold Breath: You can hold your breath for up to 15 minutes at a time.
-        Hunters Lore: You gain proficiency with two of the following skills of your choice - Animal Handling, Nature, Perception, Stealth, and Survival.
-        Natural Armor: You have tough, scaly skin. When you aren't wearing armor, your AC is 13 + your Dexterity modifier. You can use your natural armor to determine your AC if the armor you wear would leave you with a lower
-                       AC. A shield's benefits apply as normal while you use your natural armor.
-        Hungry Jaws: In battle, you can throw yourself into a vicious feeding frenzy. As a bonus action, you can make a special attack with your bite. If the attack hits, it deals its normal damage, and you gain temporary hit
-                     points (minimum of 1) equal to your Constitution modifier, and you can't use this trait again until you finish a short or long rest.
+    saving-throws:
+    - Constitution
+    - Strength
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
+    skills:
+    - N/A
+    proficiencies:
+    - Athletics
+    - Survival
+    - Deception    
+    - Intimidation
+    - Stealth
+    - Perception
+  special-abilities:
+  - title: Lizardfolk Abilities
+  - abilities: 
+    - title: Bite
+    - content: Your fanged maw is a natural weapon, which you can use to make unarmed strikes. If you hit with it, you deal piercing damage equal to 1d6 + your Strength modifier, instead of the bludgeoning damage normal for an 
+               unarmed strike.
+    - title: Cunning Artisan
+    - content: As part of a short rest, you can harvest bone and hide from a slain beast, construct, dragon, monstrosity, or plant creature of size Small or larger to create one of the following items; a shield, a 
+               club, a javelin, or 1d4 darts or blowgun needles. To use this trait, you need a blade, such as a dagger, or appropriate artisan's tools, such as leatherworker's tools.
+    - title: Hold Breath
+    - content: You can hold your breath for up to 15 minutes at a time.
+    - title: Hunters Lore
+    - content: You gain proficiency with two of the following skills of your choice; Animal Handling, Nature, Perception, Stealth, and Survival.
+    - title: Natural Armor
+    - content: You have tough, scaly skin. When you aren't wearing armor, your AC is 13 + your Dexterity modifier. You can use your natural armor to determine your AC if the armor you wear would leave you with a lower
+               AC. A shield's benefits apply as normal while you use your natural armor.
+    - title: Hungry Jaws
+    - content: In battle, you can throw yourself into a vicious feeding frenzy. As a bonus action, you can make a special attack with your bite. If the attack hits, it deals its normal damage, and you gain temporary hit
+               points (minimum of 1) equal to your Constitution modifier, and you can't use this trait again until you finish a short or long rest.
 
-    special-abilities:
-       - Proficiencies: Athletics, Survival, Intimidation, Deception
-         Feats: N/A
+  - title: Attacks
+  - content: 1 attack with bite, claw or club
+  - title: Combat Tactics
+  - content: He's not keen to fight, but he won't go out of his way to avoid one. He's not much on tactics, he'll claw, bite and slash with his tale until he wins or loses
 
-    attacks: |
-      1 attack with bite, claw or club
-    combat-tactics: |
-      He's not keen to fight, but he won't go out of his way to avoid one. He's not much on tactics, he'll claw, bite and slash with his tale until he wins or loses
-    special-equipment:
-    - A Lucky Rabbit's Foot from a rabbit he once ate. Lets him reroll 1 saving throw of his choice per long rest
+  - title: Special Equipment
+  - abilities:
+    - title:Lucky Rabbit's Foot
+    - content: A Lucky Rabbit's Foot from a rabbit he once ate. Lets him reroll 1 saving throw of his choice per long rest
 
   profile:
 
