--- a/npcs/sorsha_silvanya.yaml
+++ b/npcs/sorsha_silvanya.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -468,72 +468,173 @@ npc:
   # ???Max length???
   #
   specialties:
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    - Charisma
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - Sleep Magic
+    resistances:
+    - Charmed
     skills:
-    - High Elf Abilities:
-      - Darkvision: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
-        Keen Senses: Proficiency in Perception
-        Fey Ancestry: Advantage on saving throws against being charmed and immune to sleep magic
-        Trance: Doesn't need to sleep. Meditating for 4 hours couts as a long rest
-        Elf Weapons Training: Proficiency with the longsword, shortsword, longbow and shortbow
-        Cantrip: Minor Illusion 
-      Artificer Abilities:
-      - Magical Tinkering: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
-        Spellcasting:
-        - Description: Requires Powered Armor as Spellcasting focus
-          Spell DC: 17
-          Cantrip: Mage Hand, Mending, Message
-          1st Level: Alarm, Detect Magic, Disguise Self, Identify
-          2nd Level: Alter Self, See Invisibility, Invisibility
-          3rd Level: Dispel Magic, Tiny Servant
-        Infuse Item: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately, Knows 6 Infusions, Can Infuse 3 Items at a time  
-        The Right Tool for the Job: Can produce any set of artisan's tools with 1 hour work
-        Tool Expertise: Smith's Tool proficiency bonus is doubled
-        Flash of Genius: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws     
-      Armorer Abilities:
-      - Tool Proficiency: Proficiency with Thieve's Tools, Smith's Tools and Heavy Armor
-        Spellcasting: 
-        - Description: Requires Powered Armor as Spellcasting focus
-          Spell DC: 17
-          3rd Level: Magic Missle, Shield
-          5th Level: Mirror Image, Shatter
-          9th Level: Hypnotic Patetrn, Lightning Bolt
-        Power Armor: Powered Armor ignores strength requirements, can be used as his spellcasting focus, cannot be removed against his will and covers his entire body
-        Infiltrator Armor: Powered armor has the Lightning Launcher, Powered Steps & Second Skin abilities  
-        Extra Attack: Can take a second attack action each turn
-        Armor Modifications: Each part of his armor is consisdered seperate for the purpose of Infusion and the number of items he can infuse increases by 2 as long as theyre part of his armor
-      Rogue Abilities: 
-      - Sneak Attack: Once per turn she can deal an extra 5d6 damage if she hits an attack with advantage
-        Cunning Action: Once per turn she can take a bonus action to Dash, Disengage or Hide
-        Uncanny Dodge: Can use her reaction to halve an attack's damage
-        Evasion: Dexterity saving throws to take half damage take no damage and failed throws take half damage
-      Spy Abilities:
-      - Tricks of the Trade: Proficiency with Tinker's Tools, Thieve's Tools and Smith's Tools, Disguise, Forgery and Poison Kits and Gadget Box
-        Imposter: Has the ability to unerringly mimic another person's speech, writing and behavior after spending 3 hours studying those things and gains advantage on deception rolls to avoid detection
-      Gadget Box:
-      - Spellcasting: 
-        - Spell DC: 16
-          Cantrip: Prestidigitation, Produce Flame
-          1st Level: Knock, Warding Bond
-          2nd Level: Locate, Sending, Scrying
-        Self Destruct Mode: Can choose a delay between 1 second and 24 hours. During this time the box cannot be opened by any means. At the end of the chosen duration the box detonates requiring all creatures within 60' 
-                            to make a Con savings throw DC15 or take 7d6 force damage and be knocked prone. Successful throws recieve half damage and arent knocked prone. It takes one week to build a new one
- 
-    special-abilities:
-    - Proficiencies: Proficient in Stealth, Perception, Insight, Sleight of Hand, Theive's Tools, Tinker's Tools, Smith's Tools, Firearms, Forgery, Disguise and Poison Kits and Gadget Box     
-      Feats: War Caster, Gunner, Observant, Mobile, Fey Touched - Misty Step & Charm Person, Alert, Actor, Elven Accuracy, Keen Mind, Poisoner, Skulker                    
-    
-    attacks: |
-      Has 2 attack. Will range attack with her power armor or a spell attack
-    combat-tactics: |
-      Very reluctant to fight unless forced
-    special-equipment:
-    - Tinker's, Thieve's and Smith's Tools
-    - Forgery, Disguise and Poison Kits
+    - Communications
+    proficiencies:
+    - Stealth
+    - Perception
+    - Insight    
+    - Sleight-of-Hand
+    - Thieve's Tools
+    - Tinker's Tools
+    - Smith's Tools
+    - Firearms
+    - Forgery Kit
+    - Disguise Kit
+    - Poisoner's Kit
     - Gadget Box
-    - Powered Armor
-    - Several color-coded Speaking Stones
-    - Several remote-operable Recording Stones
-    - Various Scying Lenses and Spyglasses
+  special-abilities:
+  - title: High Elf Abilities
+  - abilities: 
+    - title: Fey Ancestry
+    - content: Advantage on saving throws againts charm and immune to sleep magic
+    - title: Darkvision
+    - content: Can see 60 in dim light as though it was bright light and in darkness as if it was dim light
+    - title: Keen Senses
+    - content: You have proficiency in the Perception skill 
+    - title: Trance
+    - content: Elves don’t need to sleep. Instead, they meditate deeply, remaining semiconscious, for 4 hours a day. (The Common word for such meditation is “trance.”) While meditating, you can dream after a fashion; such
+               dreams are actually mental exercises that have become reflexive through years of practice. After Resting in this way, you gain the same benefit that a human does from 8 hours of sleep
+    - title: Elf Weapons Training
+    - content: Proficiency with the longsword, shortsword, longbow and shortbow
+    - title: Cantrip
+    - content: Minor Illusion 
+  - title: Artificer Abilities
+  - abilities:
+    - title: Magical Tinkering
+    - content: Can invest a spark of magic into mundane objects with a touch - Bright Light, Record Message, Record Sound or Odor, Create Picture or Text
+    - title: Artificer Spellcasting 
+    - content: Requires Tinker's Tools as Spellcasting focus
+    - title: Spell DC
+    - content: 17
+    - title: Cantrip
+    - content: Mage Hand, Mending, Message
+    - title: 1st Level
+    - content: Alarm, Detect Magic, Disguise Self, Identify
+    - title: 2nd Level
+    - content: Alter Self, See Invisibility, Invisibility
+    - title: 3rd Level
+    - content: Dispel Magic, Tiny Servant
+    - title: Infuse Item
+    - content: Imbue mundane items with magical infusions, turnig them into magic items. Can attune to that item immediately,
+    - title: Infusions Known
+    - content: 6
+    - title: The Right Tool for the Job
+    - content: Can produce any set of artisan's tools with 1 hour work
+    - title: Tool Expertise
+    - content: Smith's Tool proficiency bonus is doubled
+    - title: Flash of Genius
+    - contents: Can use a reaction to add intelligence modifier to his or another creature within 30' to ability checks or saving throws     
+  - title: Armorer Abilities
+  - abilities: 
+    - title: Spellcasting
+    - abilities:
+    - title: Spell DC
+    - content:
+    - title: 3rd Level
+    - content: Magic Missle, Shield
+    - title: 5th Level
+    - content: Mirror Image, Shatter
+    - title: 9th Level
+    - content: Hypnotic Patetrn, Fire Ball
+    - title: Tools of the Trade
+    - content: You gain proficiency with heavy armor. You also gain proficiency with smith's tools. If you already have this tool proficiency, you gain proficiency with one other type of artisan's tools of your 
+               choice.
+    - title: Arcane Armor
+    - contnet: Your metallurgical pursuits have led to you making armor a conduit for your magic. As an action, you can turn a suit of armor you are wearing into Arcane Armor, provided you have smith's tools in hand. 
+               You gain the following benefits while wearing this armor;
+               If the armor normally has a Strength requirement, the arcane armor lacks this requirement for you.
+               You can use the arcane armor as a spellcasting focus for your artificer spells.
+               The armor attaches to you and can’t be removed against your will. It also expands to cover your entire body, although you can retract or deploy the helmet as a bonus action. The armor replaces any 
+               missing limbs, functioning identically to a body part it is replacing.
+               The armor continues to be Arcane Armor until you don another suit of armor or you die.
+    - title: Armor Model
+    - content: You can customize your Arcane Armor. When you do so, choose one of the following armor models; Guardian or Infiltrator. The model you choose gives you special benefits while you wear it. Each model includes
+               a special weapon. When you attack with that weapon, you can add your Intelligence modifier, instead of Strength or Dexterity, to the attack and damage rolls. You can change the armor's model whenever you 
+               finish a short or long rest, provided you have smith's tools in hand.
+    - title: Guardian
+    - content: You design your armor to be in the front line of conflict. It has the following features
+    - title: Thunder Gauntlets
+    - content: Each of the armor's gauntlets counts as a simple melee weapon while you aren't holding anything in it, and it deals 1d8 thunder damage on a hit. A creature hit by the gauntlet has 
+               disadvantage on attack rolls against targets other than you until the start of your next turn, as the armor magically emits a distracting pulse when the creature attacks someone else.
+    - title: Defensive Field
+    - content: As a bonus action, you can gain temporary hit points equal to your level in this class, replacing any temporary hit points you already have. You lose these temporary hit points if you 
+               doff the armor. You can use this bonus action a number of times equal to your proficiency bonus, and you regain all expended uses when you finish a long rest.
+    - title: Infiltrator
+    - content: You customize your armor for subtle undertakings. It has the following features;
+               Lightning Launcher - A gemlike node appears on one of your armored fists or on the chest (your choice). It counts as a simple ranged weapon, with a normal range of 90 feet and a long range of 300 feet, 
+                                    and it deals 1d6 lightning damage on a hit. Once on each of your turns when you hit a creature with it, you can deal an extra 1d6 lightning damage to that target.
+               Powered Steps - Your walking speed increases by 5 feet.
+               Dampening Field - You have advantage on Dexterity (Stealth) checks. If the armor normally imposes disadvantage on such checks, the advantage and disadvantage cancel each other, as normal.  
+    - title: Extra Attack
+    - content: You can attack twice, rather than once, whenever you take the Attack action on your turn.
+    - title: Armor Modifications
+    - content: You learn how to use your artificer infusions to specially modify your Arcane Armor. That armor now counts as separate items for the purposes of your Infuse Items feature; armor (the chest piece), 
+               boots, helmet, and the armor's special weapon. Each of those items can bear one of your infusions, and the infusions transfer over if you change your armor's model with the Armor Model feature. In 
+               addition, the maximum number of items you can infuse at once increases by 2, but those extra items must be part of your Arcane Armor.
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+    - title: Evasion
+    - content: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+  - title: Spy Abilities
+  - abilities: 
+    - title: Tricks of the Trade
+    - content: Proficiency in Disguise, Forgery, Poison Kits, Tinker's Tools and Gadget Box
+    - title: Imposter
+    - content: You gain the ability to unerringly mimic another person's speech, writing and bahavior. You must spend at least three hours studying these components of these behaviors. Your ruse is your indiscernible to the
+               casual observer. If a weary creature suspects something is amiss, you have advantage on Charisma (Deception) checks to avoid detection
+    - title: Gadget Box
+    - content: Allows you to use specific spells of your choosing and can be used identically to Thieve's Tools or Tinker's Tools, Spellcasting is not intrinisc to the spy and that without the Gadget Box, the Spy may not 
+               use Gadget Box spellcasting.
+               Gadget Box Spellcasting
+               Cantrip - Prestidigitation, Produce Flame
+               1st Level - Knock, Warding Bond
+               2nd Level - Locate, Sending, Scrying
+               Gadget Box Self Destruct Mode - You can set a delay between 1 second and 24hrs. During that time the gadget box cannot be open by any means and cannot be used. At the end of that duration all creatures within
+                                               60ft must make a Constitution saving throw or take Xd6 force damage and be knocked prone, where X is your Rogue Level. Taking half damage on a successful save. It takes 1 weeks 
+                                               using tinker's tools to build a new box
+    
+  - title: Feats
+  - content: War Caster, Gunner, Observant, Mobile, Fey Touched - Misty Step & Charm Person, Alert, Actor, Elven Accuracy, Keen Mind, Poisoner, Skulker                    
+    
+  - title: Attacks
+  - content: Has 2 attack. Will range attack with her power armor or a spell attack
+  - title: Combat Tactics
+  - content: Very reluctant to fight unless forced
+
+  - title: Special Equipment
+  - abilities:
+    - title: Gadget Box
+    - content: see above
+    - title: Powered Armor
+    - content: see above
+    - title: Sending Stones
+    - content: Several color-coded Speaking Stones - Sending stones come in pairs, with each smooth stone carved to match the other so the pairing is easily recognized. While you touch one stone, you can use an action to cast
+               the Sending spell from it. The target is the bearer of the other stone. If no creature bears the other stone, you know that fact as soon as you use the stone and don't cast the spell. Once Sending is cast through
+               the stones, they can't be used again until the next dawn. If one of the stones in a pair is destroyed, the other one becomes nonmagical.
+    - title: Recording Stones
+    - content: Several remote-operable Recording Stones - Once activated, the stone will record all sounds within a 20 foot diameter for four hours and then it will shut off. When the same stone is activated again, it will 
+               replay all of the sounds that it recorded. Once Recording is cast through the stones, they can't be used again until the next dawn.
+    - title: Scrying and Spying
+    - content: Various Scying Lenses and Spyglasses
 
   profile:
 
