--- a/npcs/steve_patch_yarrow.yaml
+++ b/npcs/steve_patch_yarrow.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: older adult
+    age: Older Adult
 
     #
     # Races (case insensitive):
@@ -329,6 +329,7 @@ npc:
     #
     # Optional.  0 or more.
     #
+    factions:
     - id: a_thieve_s_assassin_s_guild
       name: A Thieve's/Assassin's Guild
 
@@ -460,28 +461,48 @@ npc:
   # ???Max length???
   #
   specialties:
-    skills: 
-    - Rogue Abilities:
-      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage
-      Thief Abilities:
-      - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
-        Second-Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
-                            your Dexterity modifier.
+    saving-throws:
+    - Dexterity
+    - Intelligence
+    damage-immunities:
+    - N/A
+    condition-immunities:
+    - N/A
+    resistances:
+    - N/A
+    skills:
+    - Mixology
+    proficiencies:
+    - Stealth
+    - Sleight-of-Hand
+    - Survival   
+    - Intimidation
+    - Persuasion
+  special-abilities: 
+  - title: Rogue Abilities
+  - abilities: 
+    - title: Expertise
+    - content: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+    - title: Sneak Attack
+    - content: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+    - title: Cunning Action
+    - content: Can take a bonus action on each turn to Hide, Disengage or Dash
+    - title: Uncanny Dodge
+    - content: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+  - title: Thief Abilities
+  - abilities: 
+    - title: Fast Hands
+    - content: You can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action.
+    - title: Second-Story Work
+    - content: When you choose this archetype at 3rd Level, you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you 
+               cover increases by a number of feet equal to your Dexterity modifier.
+  - title: Feats
+  - content: Crossbow Expert
 
-    special-abilities:
-       - Proficiencies: Intimidation, Stealth, Sleight-of-Hand, Survival
-         Feats: Crossbow Expert
-
-    attacks: |
-      1 attacks with hand crossbow or dagger
-    combat-tactics: |
-      He's a quick draw and a decent shot with his hand crossbow, so he'll always start with that but he's definitely not above getting blood on his hands if necessary
-    special-equipment:
-    - Dagger
-    - Hand Crossbow
+  - title: Attacks
+  - content: 1 attacks with hand crossbow or dagger
+  - title: Combat Tactics
+  - content: He's a quick draw and a decent shot with his hand crossbow, so he'll always start with that but he's definitely not above getting blood on his hands if necessary
 
   profile:
 
@@ -509,3 +530,4 @@ npc:
     #
     personality: |
      Steve hates his life. He's always been tough and his life has never been easy, but the life he's living now, as barely more than a doorman, he hates his life. He resents what he's being forced to do. He resents that he's
+     not being used for the skills he has
